# 2b-agent

./: .gitignore  AGENTS.md  LICENSE  NOTICE  PRIVACY.md  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
docs/: capabilities-roadmap.md  continuity-design.md  performance-reliability-roadmap.md  roadmap-handoff.md  sandbox-capabilities-roadmap.md  security-hardening-roadmap.md
docs/superpowers/plans/: 2026-07-06-local-model-reliability.md  2026-07-08-esc-global-abort.md  2026-07-10-host-verify-loop.md  2026-07-10-reasoning-control.md
docs/superpowers/specs/: 2026-07-08-esc-global-abort-design.md  2026-07-08-license-gate-design.md  2026-07-09-host-verify-loop-design.md  2026-07-10-reasoning-control-design.md
packaging/homebrew/: MANUAL.md  README.md
packaging/homebrew/Formula/: twob-agent.rb
src/two_b/: __init__.py  app_tui.py  banner.py  catalog.json  catalog.py  changelog.py  cli.py  cmdguard.py  commands.py  completion.py  config.py  conversation.py  diagnostics.py  difffmt.py  discover.py  doctor.py  driftreplay.py  evals.py  evalstats.py  license.py  lsp.py  mcp_client.py  models.json  notify.py  orchestrator.py  persist.py  planparse.py  prompt.py  rawkey.py  registry.py  repomap.py  retrieval.py  seatbelt.py  session.py  setup.py  subagents.py  symbols.py  testcmd.py  theme.py  toolline.py  (+8 more)
src/two_b/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai_compat.py
tests/: spike_ctrl_b.py  test_abort_all.py  test_abort_connections.py  test_anthropic_streaming.py  test_archive_inject.py  test_banner_header.py  test_cancel_orchestration.py  test_cancel_streaming.py  test_catalog.py  test_cerebras_provider.py  test_changelog_undo.py  test_clarify_nudge.py  test_cmdguard.py  test_cmdguard_exfil.py  test_command_arg_coercion.py  test_compaction_hardening.py  test_completion.py  test_context_meter.py  test_continuity.py  test_deepseek_provider.py  test_default_model.py  test_delegate_wiring.py  test_diagnostics.py  test_discover.py  test_dispatch_args.py  test_doctor.py  test_drift_replay.py  test_edit_file.py  test_env_scrub.py  test_esc_kill.py  test_evals.py  test_evalstats.py  test_export.py  test_false_done_nudge.py  test_file_safety.py  test_google_key_header.py  test_google_streaming.py  test_grants.py  test_input_sanitize.py  test_license_gate.py  (+62 more)
tests/fixtures/: ollama_search_tools.html
