[project]
name = "2b-agent"
version = "0.1.0"
description = "A local-first coding agent that keeps small local models focused instead of hallucinating."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "textual>=0.60",
    "mcp>=1.0",
]

[project.scripts]
2b = "two_b.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/two_b"]
