[project]
name = "2b-agent"
dynamic = ["version"]                    # single source of truth: two_b.__version__
description = "A local-first coding agent that keeps small local models focused instead of hallucinating."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
# Floors are the earliest releases that officially list Python 3.14 support
# (rich 14.2, textual 6.3, mcp 1.28). prompt_toolkit is pure-Python with no
# upper Python cap; 3.0.52 is the current release. All still support 3.11.
dependencies = [
    "rich>=14.2",
    "prompt_toolkit>=3.0.52",
    "textual>=6.3",
    "mcp>=1.28",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
2b = "two_b.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/two_b/__init__.py"           # reads __version__ — bump it in one place per release

[tool.hatch.build.targets.wheel]
packages = ["src/two_b"]
